--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(https://scontent.fhel1-1.fna.fbcdn.net/v/t1.0-9/644189_3176170581860_1327714999_n.jpg?_nc_cat=103&_nc_sid=e3f864&_nc_ohc=7DQIbDfg-CIAX84Dl8q&_nc_ht=scontent.fhel1-1.fna&oh=50228b4901e107185b6aaac5fce29d56&oe=5F4FD889);
+	background-image: url(https://i.imgur.com/7JNtvYu.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
