--- a/style.css
+++ b/style.css
@@ -328,6 +328,11 @@ p {
 	opacity: .9;
 	z-index: -1;
 }
+#services .service-bottom .icon {
+	height: 80px;
+	width: 80px;
+	margin-bottom: 20px;
+}
 
 #services .service-item h2 {
 	font-size: 2rem;
