--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(https://i.imgur.com/7JNtvYu.jpg);
+	background-image: url(https://i.imgur.com/HPSNeVs.png);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
